add new file paths

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spotify-lite",
-  "homepage": "https://gitname.github.io/react-gh-pages",
+  "homepage": "https://mohiramansurovna.github.io/PhotoAlbum/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
